layout mostly there

--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
                 </div>
             </div>
             <div class="container-fluid" id="msgArea">
-                <div class="row">
-                    <div class="col">yup</div>
+                <div class="row h-100 no-gutters">
+                    <div class="col-lg-10">
+                        <textarea class="form-control"></textarea>
+                    </div>
+                    <div class="col-lg-2">
+                        <button type="button" class="btn btn-primary" id="sendButton">Send</button>
+                    </div>
                 </div>
             </div>
         </div>
