--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Chat</title>
         <link rel="stylesheet" href="css/site.css">
+
+        <!-- AngularJS -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     </head>
     <body>
         <div class="container-fluid">
@@ -37,5 +40,6 @@
 
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>       
+
     </body>
 </html>
